--- a/package.json
+++ b/package.json
@@ -3,17 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.3.0",
+    "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "1.3.2",
+    "bootstrap": "5.2.3",
+    "connected-react-router": "^6.9.3",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-bootstrap": "2.7.2",
     "react-dom": "^18.2.0",
     "react-intl": "^6.2.7",
-    "react-redux": "^8.0.5",
+    "react-redux": "8.0.5",
     "react-router-dom": "6.8.1",
     "react-scripts": "5.0.1",
+    "reactstrap": "8.9.0",
+    "redux": "4.2.1",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-state-sync": "^3.1.4",
+    "redux-thunk": "^2.4.2",
     "sass": "^1.58.0",
     "web-vitals": "^2.1.4"
   },
