--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "1.3.2",
     "bootstrap": "5.2.3",
     "connected-react-router": "^6.9.3",
+    "history": "^5.3.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-bootstrap": "2.7.2",
