--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@formatjs/intl-pluralrules": "^5.1.10",
+    "@formatjs/intl-relativetimeformat": "^11.1.10",
     "@fortawesome/fontawesome-free": "^6.3.0",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
     "@testing-library/jest-dom": "^5.16.5",
