--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "connected-react-router": "^6.9.3",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
+    "next-redux-wrapper": "^8.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "2.7.2",
     "react-dom": "^18.2.0",
@@ -22,8 +23,10 @@
     "react-redux": "8.0.5",
     "react-router-dom": "6.8.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.2",
     "reactstrap": "8.9.0",
     "redux": "4.2.1",
+    "redux-auth-wrapper": "^2.1.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-state-sync": "^3.1.4",
